{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 28,
  "lineage": "c27fb356-6445-8c45-67e7-df9560141479",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/frontendIPConfigurations/internal",
                "load_balancer_rules": [
                  "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/loadBalancingRules/lb-rule"
                ],
                "name": "internal",
                "private_ip_address": "10.0.0.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app"
              }
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal",
            "location": "westeurope",
            "name": "load-balancer-internal",
            "private_ip_address": "10.0.0.100",
            "private_ip_addresses": [
              "10.0.0.100"
            ],
            "resource_group_name": "rg-lb-internal-vmss",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Compute/virtualMachineScaleSets/vmss-app/virtualMachines/0/networkInterfaces/nic-vmss/ipConfigurations/internal",
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Compute/virtualMachineScaleSets/vmss-app/virtualMachines/1/networkInterfaces/nic-vmss/ipConfigurations/internal",
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Compute/virtualMachineScaleSets/vmss-app/virtualMachines/5/networkInterfaces/nic-vmss/ipConfigurations/internal"
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/backendAddressPools/backend-pool",
            "load_balancing_rules": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/loadBalancingRules/lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal",
            "name": "backend-pool"
          },
          "dependencies": [
            "azurerm_lb.lb-internal",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/probes/probe-http",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/loadBalancingRules/lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal",
            "name": "probe-http",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.lb-internal",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/backendAddressPools/backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/frontendIPConfigurations/internal",
            "frontend_ip_configuration_name": "internal",
            "frontend_port": 80,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/loadBalancingRules/lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal",
            "name": "lb-rule",
            "probe_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/loadBalancers/load-balancer-internal/probes/probe-http",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.lb-internal",
            "azurerm_lb_backend_address_pool.backend-pool",
            "azurerm_lb_probe.probe-http",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/natGateways/nat-gateway",
            "idle_timeout_in_minutes": 10,
            "location": "westeurope",
            "name": "nat-gateway",
            "resource_group_name": "rg-lb-internal-vmss",
            "resource_guid": "da4b7728-32f5-4779-bbfb-95f78d9f9c47",
            "sku_name": "Standard",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/natGateways/nat-gateway|/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/publicIPAddresses/pip-nat-gateway",
            "nat_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/natGateways/nat-gateway",
            "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/publicIPAddresses/pip-nat-gateway"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gateway",
            "azurerm_public_ip.pip-nat-gateway",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-app",
            "location": "westeurope",
            "name": "nsg-subnet-app",
            "resource_group_name": "rg-lb-internal-vmss",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.0.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule-allow-http",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.0.0/24"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-app/securityRules/rule-allow-http",
            "name": "rule-allow-http",
            "network_security_group_name": "nsg-subnet-app",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-lb-internal-vmss",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/publicIPAddresses/pip-nat-gateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.205.171.13",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-nat-gateway",
            "resource_group_name": "rg-lb-internal-vmss",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app",
            "name": "subnet-app",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lb-internal-vmss",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lb-internal-vmss",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "subnet_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app",
            "nat_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/natGateways/nat-gateway",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gateway",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app",
            "network_security_group_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-app",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2c1688ea-9798-4156-9fbc-9b2903769014",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app",
            "location": "westeurope",
            "name": "vnet-app",
            "resource_group_name": "rg-lb-internal-vmss",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app",
                "name": "subnet-app",
                "security_group": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-app"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.157.213.187",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion",
            "resource_group_name": "rg-lb-internal-vmss",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-jumpbox",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "3kebmleys3ledh32tmuqg3uqce.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-lb-internal-vmss/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app"
              }
            ],
            "location": "westeurope",
            "name": "nic-vm",
            "private_ip_address": "10.0.0.10",
            "private_ip_addresses": [
              "10.0.0.10"
            ],
            "resource_group_name": "rg-lb-internal-vmss"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app",
            "module.vm-jumpbox.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    }
  ]
}